# teacup

./: .gitmodules  Cargo.toml  readme.md
examples/: basic.rs
src/: layout.rs  lib.rs  main.rs
src/renderer/: mesh_builder.rs  pipeline_builder.rs
src/renderer_backend/: mesh_builder.rs  mod.rs  pipeline_builder.rs
src/shaders/: shader.wgsl
teacup/: Cargo.toml  readme.md
teacup/src/: layout.rs  lib.rs
teacup/src/renderer_backend/: mesh_builder.rs  pipeline_builder.rs
test/: Cargo.toml
test/src/: main.rs
