[package]
name = "teacup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
glfw = { version = "0.59.0", features = ["all"] }
wgpu = "25.0"
image = "0.25.6"
tokio = { version = "1.44.2", features = ["full"] }
rayon = "1.10.0"
pollster = "0.4.0"
tinycolors = { path = "../tinycolors" }
cgmath = { version = "0.18.0", features = ["serde"] }
wgsl-inline = "0.2.1"
bytemuck = "1.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
